# gasman

./: .gitignore  README.md  pyproject.toml
src/gasman/: __init__.py  cli.py  config.py  iterm_dashboard.py  tmux_watcher.py
tests/: test_tmux_watcher.py
